  scripts found in the Tools directory.

- Issue #8033: sqlite3: Fix 64-bit integer handling in user functions
  on 32-bit architectures. Initial patch by Philippe Devalkeneer.

Extension Modules
-----------------

- Issue #14212: The re module didn't retain a reference to buffers it was
  scanning, resulting in segfaults.

Tests
-----

- Issue #14032: Fix incorrect variable name in test_cmd_line_script debugging
  message (Patch by Jason Yeo)

- Issue #14589: Update certificate chain for sha256.tbs-internet.com, fixing
  a test failure in test_ssl.

Build
-----

- Issue #14557: Fix extensions build on HP-UX. Patch by Adi Roiban.

- Issue #14437: Fix building the _io module under Cygwin.

- Issue #14387: Do not include accu.h from Python.h.

- Issue #14359: Only use O_CLOEXEC in _posixmodule.c if it is defined.
  Based on patch from Hervé Coatanhay.

Documentation
-------------

- Issue #8799: Fix and improve the threading.Condition documentation.


What's New in Python 3.2.3 release candidate 2?
===============================================

*Release date: XX-Mar-2012*

Library
-------

- Issue #6884: Fix long-standing bugs with MANIFEST.in parsing in distutils
  on Windows.

Extension Modules
-----------------

- Issue #14234: CVE-2012-0876: Randomize hashes of xml attributes in the hash
  table internal to the pyexpat module's copy of the expat library to avoid a
  denial of service due to hash collisions.  Patch by David Malcolm with some
  modifications by the expat project.


What's New in Python 3.2.3?
===========================

*Release date: 10-Apr-2012*

Build
-----

- Issue #14387: Work around a problem building extension modules under Windows
  by undefining ``small`` before use in the Python headers.


What's New in Python 3.2.3 release candidate 2?
===============================================

*Release date: 18-Mar-2012*

Library
-------

- Issue #6884: Fix long-standing bugs with MANIFEST.in parsing in distutils
  on Windows.
